@@ -411,8 +411,9 @@ argument_list|)
 expr_stmt|;
 try|try
 block|{
+comment|// TopLevelQuery is a Query followed by the end-of-input (EOF)
 return|return
-name|Query
+name|TopLevelQuery
 argument_list|(
 name|field
 argument_list|)
@@ -3155,6 +3156,51 @@ literal|true
 condition|)
 return|return
 name|ret
+return|;
+block|}
+throw|throw
+operator|new
+name|Error
+argument_list|(
+literal|"Missing return statement in function"
+argument_list|)
+throw|;
+block|}
+comment|// This makes sure that there is no garbage after the query string
+DECL|method|TopLevelQuery
+specifier|final
+specifier|public
+name|Query
+name|TopLevelQuery
+parameter_list|(
+name|String
+name|field
+parameter_list|)
+throws|throws
+name|ParseException
+block|{
+name|Query
+name|q
+decl_stmt|;
+name|q
+operator|=
+name|Query
+argument_list|(
+name|field
+argument_list|)
+expr_stmt|;
+name|jj_consume_token
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+block|{
+if|if
+condition|(
+literal|true
+condition|)
+return|return
+name|q
 return|;
 block|}
 throw|throw
